# argon

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json
.github/workflows/: ci.yml
bench/: README.md  plot_scaling.py  run_benchmarks.sh
bench/results/: constraints.csv  hierarchy_double_ref.csv  hierarchy_single_ref.csv  instances.csv  shapes.csv  shapes_loop.csv
core/compiler/: .gitignore  Cargo.toml  build.rs  sparse_qr_time_count.txt  wrapper.h
core/compiler/examples/: cell_out_of_order.ar  dimensions.ar  func_out_of_order.ar  hierarchy.ar  if.ar  if_inconsistent.ar  nested_inst.ar  param_float.ar  scopes.ar  via.ar  via_array.ar
core/compiler/examples/argon_workspace/: lib.ar
core/compiler/examples/argon_workspace/nested/: nested.ar
core/compiler/examples/bbox/: lib.ar
core/compiler/examples/bool_literal/: lib.ar
core/compiler/examples/cell_out_of_order/: lib.ar
core/compiler/examples/enumerations/: lib.ar
core/compiler/examples/external_mods/main_crate/: Argon.toml  lib.ar
core/compiler/examples/external_mods/sub_crate/: lib.ar
core/compiler/examples/fallback_basic/: lib.ar
core/compiler/examples/fallback_inst/: lib.ar
core/compiler/examples/func_out_of_order/: lib.ar
core/compiler/examples/hierarchy/: lib.ar
core/compiler/examples/lub_match/: lib.ar
core/compiler/examples/lyp/: basic.lyp
core/compiler/examples/nested_inst/: lib.ar
core/compiler/examples/param_float/: lib.ar
core/compiler/examples/param_int/: lib.ar
core/compiler/examples/scopes/: lib.ar
core/compiler/examples/seq_cell/: lib.ar  sparse_qr_time_count.txt
core/compiler/examples/seq_fn/: lib.ar
core/compiler/examples/seq_recur/: lib.ar
core/compiler/examples/sky130_inverter/: Argon.toml  lib.ar  sparse_qr_time_count.txt
core/compiler/examples/via_array/: lib.ar  rust_sparse_qr_time.txt
core/compiler/grammar/: Argon.g4
core/compiler/src/: SPQR.rs  antlr.rs  argon.l  argon.y  ast.rs  cell.y  compile.rs  config.rs  eigen_qr.cpp  gds.rs  layer.rs  lib.rs  parse.rs  solver.rs  solver2.rs  spqr_eigen.rs  spqr_wrapper.rs  time_count.txt
core/compiler/src/ast/: annotated.rs  mod.rs
core/compiler/src/parser/: grammar.rs  lexer.rs  mod.rs  token.rs
core/compiler/src/std/: lib.ar
core/gui/: Cargo.toml
core/gui/assets/icons/: icons.ai
core/gui/src/: actions.rs  app.rs  canvas.rs  lib.rs  project.rs  rpc.rs  socket.rs  sse.rs  text.rs  theme.rs  toolbars.rs
core/gui/src/editor/: canvas.rs  input.rs  mod.rs  toolbars.rs
core/lang-server/: Cargo.toml
core/lang-server/src/: config.rs  document.rs  import.rs  lib.rs  main.rs  rpc.rs
core/lsp/: Cargo.toml
core/lsp-server/: Cargo.toml
core/lsp-server/src/: config.rs  document.rs  import.rs  lib.rs  main.rs  rpc.rs  socket.rs
core/lsp/src/: main.rs  socket.rs
docs/: developers.md  parser.md
docs/figures/: argon_paper.ai
examples/any_type_inst/: lib.ar
examples/bbox/: lib.ar
examples/bool_literal/: lib.ar
examples/cell_bad_arg_reuse/: lib.ar
examples/enumerations/: lib.ar
examples/external_mods/main_crate/: lib.ar
examples/external_mods/sub_crate/: lib.ar
examples/flipped_rect/: lib.ar
examples/for_loop_basic/: lib.ar
examples/func_bad_arg_reuse/: lib.ar
examples/invalid_cast/: lib.ar
examples/lub_match/: lib.ar
examples/nested_inst/: lib.ar
examples/partially_constrained_inst/: lib.ar
examples/precedence/: lib.ar
examples/range_perf/: lib.ar
examples/seq_any/: lib.ar
examples/seq_basic/: lib.ar
examples/seq_constructor/: lib.ar
examples/seq_fn/: lib.ar
examples/seq_index/: lib.ar
examples/sse_basic/: lib.ar
examples/stress_constraints/: lib.ar
examples/stress_hierarchy/: lib.ar
examples/stress_instances/: lib.ar
examples/stress_shapes/: lib.ar
examples/testing/: lib.ar
examples/text/: lib.ar
examples/tuple_any/: lib.ar
examples/tuple_basic/: lib.ar
examples/via/: lib.ar
examples/via_array/: lib.ar
gui/: Cargo.toml
gui/src/: canvas.rs
pdks/sky130/: Argon.toml  lib.ar  sky130.lyp
plugins/nvim/ftplugin/: argon.lua
plugins/nvim/lua/argon/: client.lua  init.lua
plugins/nvim/lua/argon/commands/: gui.lua  init.lua
plugins/nvim/lua/argon/config/: init.lua
plugins/nvim/lua/argon_lsp/: client.lua  init.lua
plugins/nvim/lua/argon_lsp/commands/: gui.lua  init.lua
plugins/nvim/lua/argon_lsp/config/: init.lua
plugins/nvim/syntax/: argon.vim
plugins/nvim/tests/: run.sh  smoke.lua
plugins/vscode/: language-configuration.json  package-lock.json  package.json  tsconfig.json
plugins/vscode/client/: package-lock.json  package.json  tsconfig.json
plugins/vscode/client/src/: extension.ts
plugins/vscode/src/: extension.ts  helpers.ts
plugins/vscode/syntaxes/: argon.tmLanguage.json
plugins/vscode/test/: helpers.test.cjs
scripts/: bootstrap-antlr.sh  bootstrap.sh  build-compiler.sh  test-plugins.sh
