[workspace]

resolver = "2"
members = ["core/compiler", "core/gui", "core/lang-server"]

[workspace.dependencies]
anyhow = "1"
cfgrammar = { version = "0.14", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
approx = "0.5"
rust_decimal = "1"
rust_decimal_macros = "1"
indexmap = { version = "2", features = ["serde"] }
im = "15"
clap = { version = "4", features = ["derive"] }
rgb = { version = "0.8", features = ["serde"] }
thiserror = "2"
toml = "1"
regex = "1"
arcstr = { version = "1", features = ["serde"] }
itertools = "0.14"
tarpc = { version = "0.37", features = ["full"] }
bytes = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tower-lsp-server = "0.23"

geometry = { version = "0.7", registry = "substrate" }
enumify = { version = "0.2", registry = "substrate" }
uniquify = { version = "0.4", registry = "substrate" }

# Use the local Zed checkout for gpui so we can iterate on the platform layer
# (e.g. the X11 mouse-motion fix). The path must point at the `argon-dev`
# checkout matching the pinned commit in Cargo.lock.
[patch."https://github.com/ucb-substrate/zed"]
gpui = { path = "../zed/crates/gpui" }
