[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-where = { version = "1", features = ["serde"] }
nalgebra = { version = "0.34", features = ["rayon"] }
nalgebra-sparse = "0.11"
klayout-lyp = "0.1.1"
faer = {version = "0.23.2", features = ["rayon"]}
rayon = "1.10"
faer-ext = { version = "0.7.1", features = ["nalgebra"] }
libc = "0.2"

anyhow = { workspace = true }
cfgrammar = { workspace = true }
lrlex = { workspace = true }
lrpar = { workspace = true }
itertools = { workspace = true }
enumify = { workspace = true }
arcstr = { workspace = true }
serde = { workspace = true }
approx = { workspace = true }
indexmap = { workspace = true }
geometry = { workspace = true }
rgb = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
gds21 = "0.2"

[build-dependencies]
lrpar = { version = "0.13", features = ["serde"] }
#trying sparse
bindgen = "0.72.1"

cfgrammar = { workspace = true }
lrlex = { workspace = true }
