[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-where = { version = "1", features = ["serde"] }
nalgebra-sparse = "0.11"
rayon = "1.10"
libc = "0.2"
rand = "0.8.5"
gds21 = "0.2"
nalgebra = { version = "0.34", features = ["rayon", "sparse"] }
klayout-lyp = "0.1.1"
gds = { git = "https://github.com/ucb-substrate/substrate2.git", branch = "main" }


anyhow = { workspace = true }
cfgrammar = { workspace = true }
lrlex = { workspace = true }
lrpar = { workspace = true }
itertools = { workspace = true }
enumify = { workspace = true }
arcstr = { workspace = true }
serde = { workspace = true }
approx = { workspace = true }
indexmap = { workspace = true }
geometry = { workspace = true }
uniquify = { workspace = true }
rgb = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
const_format = "0.2"

[build-dependencies]
lrpar = { version = "0.13", features = ["serde"] }
cc = "1.2.51"

cfgrammar = { workspace = true }
lrlex = { workspace = true }
