[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-where = { version = "1", features = ["serde"] }
nalgebra = { version = "0.34", features = ["sparse"] }
klayout-lyp = "0.1"
gds = { git = "https://github.com/ucb-substrate/substrate2.git", branch = "main" }
antlr-rust = "0.3.0-beta"
anyhow = { workspace = true }
cfgrammar = { workspace = true }
itertools = { workspace = true }
enumify = { workspace = true }
arcstr = { workspace = true }
serde = { workspace = true }
approx = { workspace = true }
indexmap = { workspace = true }
geometry = { workspace = true }
uniquify = { workspace = true }
rgb = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
const_format = "0.2"
