[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
lsp-server = { path = "../lsp-server" }
compiler = { path = "../compiler" }
gpui = { git = "https://github.com/ucb-substrate/zed", branch = "argon-dev" }
smallvec = "1"
rust-embed = "8"
lazy_static = "1"
itertools = { workspace = true }
clap = { workspace = true }
arcstr = { workspace = true }
cfgrammar = { workspace = true }
enumify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tarpc = { workspace = true }
async-compat = "0.2"
futures = { workspace = true }
geometry = { version = "0.7.1", registry = "substrate" }
indexmap = { workspace = true }
rgb = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"
tower-lsp = "0.20"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
