[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
lang-server = { path = "../lang-server" }
compiler = { path = "../compiler" }
anyhow = { workspace = true }
itertools = { workspace = true }
clap = { workspace = true }
arcstr = { workspace = true }
cfgrammar = { workspace = true }
enumify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tarpc = { workspace = true }
futures = { workspace = true }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
eframe = { version = "0.33.0", default-features = false, features = ["glow", "wayland", "x11"] }
geometry = { version = "0.7.1", registry = "substrate" }
indexmap = { workspace = true }
rgb = { version = "0.8", features = ["serde"] }
tower-lsp-server = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
