[package]
name = "lsp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
compiler = { version = "0.1.0", path = "../compiler" }

tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tokio-util = { version = "0.7", features = ["codec"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
cfgrammar = { workspace = true }
lrlex = { workspace = true }
lrpar = { workspace = true }
itertools = { workspace = true }
tarpc = { workspace = true }
lsp-document = "0.6"
arcstr = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
